--- a/src/templates/home/faq.html
+++ b/src/templates/home/faq.html
@@ -1,12 +1,15 @@
 {% extends 'home/base.html' %}
 {% load static %}
+{% block title %}
+FAQ
+{%endblock %}
 {% block content %}
 <div class="banner">
   <img class="img-responsive bannerimg" src="/static/images/faq.png" alt="" />
   <div class="bannertitle">
     <div class="row">
       <div class="col-md-4 col-md-offset-2">
-        <h1>Welcome {{ request.session.user_name }}<h1>
+        <h1>Welcome {{ request.session.user_name }}</h1>
         <p>
           How can we help you?
         </p>
@@ -27,8 +30,8 @@
 </div>
 <div class="clearfix"></div>
 <div style="background-color: rgb(224,192,151);">
-  <div class="row" style="text-align: center;padding-top: 50px; width: 1850px; padding-left: 600px; display: flex; justify-content: space-between">
-    <div class="col-md-4 col-md-offset-2" style="width: 600px">
+  <div class="row" style="text-align: center;padding-top: 200px;">
+    <div class="col-md-4 col-md-offset-2">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
@@ -44,7 +47,7 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="col-md-4" style="width: 600px">
+    <div class="col-md-4">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
@@ -62,12 +65,12 @@
     </div>
   </div>
 
-  <div class="row" style="text-align: center;padding-top: 50px; width: 1850px; padding-left: 600px; display: flex; justify-content: space-between">
-    <div class="col-md-4 col-md-offset-2" style="width: 600px">
+  <div class="row" style="text-align: center;padding-top: 80px;">
+    <div class="col-md-4 col-md-offset-2">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
-          <h2>Evaluation</h2>
+          <h2>About Projects</h2>
           <div style="border-bottom: 2px solid rgb(184,92,56);"></div>
           <a href="/faq/11">Can we have a Branded Landing Page?</a>
           <a href="/faq/12"> If I send a project through MineFinder for my team to evaluate, can the public see the
@@ -79,11 +82,11 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="col-md-4" style="width: 600px">
+    <div class="col-md-4">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
-          <h2>Rules</h2>
+          <h2>Safrty & Security</h2>
           <div style="border-bottom: 2px solid rgb(184,92,56);"></div>
           <a href="/faq/15">How we enforce our rules</a>
           <a href="/faq/16">Notices on Minefinder and what they mean</a>
