--- a/src/templates/home/maps.html
+++ b/src/templates/home/maps.html
@@ -99,15 +99,15 @@
         </div>
         <div class="col-md-4">
           {% for item in projects %}
-          <div class="col-md-12">
+          <div class="col-md-12" style="margin-top:20px">
             <div class="box">
               <div style="margin-left: 20px">
                 <div class="clearfix"></div>
                 <div>
-                  <div class="col-sm-3">
-                    <img src="" alt="">
+                  <div class="col-sm-4">
+                    <img src="/media/{{item.gis}}" style="width: 100%; height: 100%;margin-top:100px;" alt="">
                   </div>
-                  <div class="col-sm-9">
+                  <div class="col-sm-8">
                     <a href="/dealroom/{{item.id}}">
                       <h2>
                         {{item.name}}
@@ -129,11 +129,34 @@
               </div>
               <div class="clearfix"></div>
             </div>
+            <div class="clearfix"></div>
           </div>
           {% endfor %}
         </div>
       </div>
-
+      <div style="height: 100px"></div>
+      <ul class="list" style="margin:0 auto;text-align:center;font-size:20px">
+        {% for page in page_list %}
+            {% if request.GET.page %}
+                {% if page == request.GET.page|add:0 %}
+                    <a href="?page={{ page }}"
+                       class="btn-sm btn-success btn">{{ page }}</a>
+                {% elif  request.GET.page|add:0 > data.number and page == 1 %}
+                    <a href="?page={{ page }}"
+                       class="btn-lg btn-success btn">{{ page }}</a>
+                {% else %}
+                    <a href="?page={{ page }}" class="btn-lg btn">{{ page }}</a>
+                {% endif %}
+            {% else %}
+                {% if page == 1 %}
+                    <a href="?page={{ page }}"
+                       class="btn-lg btn-success btn">{{ page }}</a>
+                {% else %}
+                    <a href="?page={{ page }}" class="btn-lg btn">{{ page }}</a>
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+    </ul>
       <div style="height: 100px"></div>
     </div>
     <style>
@@ -145,7 +168,7 @@
         align-content: center;
       }
 
-      .btn {
+      .banner .btn {
         background-color: rgb(184, 92, 56);
         color: rgb(255, 255, 255);
         height: 60px;
