updated urls & added demo database

--- a/src/templates/home/faq.html
+++ b/src/templates/home/faq.html
@@ -10,9 +10,7 @@ FAQ
     <div class="row">
       <div class="col-md-4 col-md-offset-2">
         <h1>Welcome {{ request.session.user_name }}</h1>
-        <p>
-          How can we help you?
-        </p>
+        <p>How can we help you?</p>
       </div>
       <div class="col-md-4">
         <form class="form-login" action="/faq/" method="post">
@@ -30,7 +28,7 @@ FAQ
 </div>
 <div class="clearfix"></div>
 <div style="background-color: rgb(224,192,151);">
-  <div class="row" style="text-align: center;padding-top: 200px;">
+  <div class="row" style="text-align: center;padding-top: 50px;">
     <div class="col-md-4 col-md-offset-2">
       <div class="box">
         <div style="margin-left: 20px;">
@@ -65,12 +63,12 @@ FAQ
     </div>
   </div>
 
-  <div class="row" style="text-align: center;padding-top: 80px;">
+  <div class="row" style="text-align: center;padding-top: 50px;">
     <div class="col-md-4 col-md-offset-2">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
-          <h2>About Projects</h2>
+          <h2>Evaluation</h2>
           <div style="border-bottom: 2px solid rgb(184,92,56);"></div>
           <a href="/faq/11">Can we have a Branded Landing Page?</a>
           <a href="/faq/12"> If I send a project through MineFinder for my team to evaluate, can the public see the
@@ -86,7 +84,7 @@ FAQ
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
-          <h2>Safrty & Security</h2>
+          <h2>Rules</h2>
           <div style="border-bottom: 2px solid rgb(184,92,56);"></div>
           <a href="/faq/15">How we enforce our rules</a>
           <a href="/faq/16">Notices on Minefinder and what they mean</a>
