--- a/src/templates/home/faqs.html
+++ b/src/templates/home/faqs.html
@@ -1,5 +1,9 @@
-{% extends 'home/base.html' %} {% load static %} {% block title %} FAQ
-{%endblock %} {% block content %}
+{% extends 'home/base.html' %}
+{% load static %}
+{% block title %}
+FAQ
+{%endblock %}
+{% block content %}
 <div class="banner">
   <img class="img-responsive bannerimg" src="/static/images/faq.png" alt="" />
   <div class="bannertitle">
@@ -24,7 +28,7 @@
 </div>
 <div class="clearfix"></div>
 <div style="background-color: rgb(224, 192, 151)">
-  <div class="row" style="text-align: center; padding-top: 200px">
+  <div class="row" style="text-align: center; padding-top: 50px;">
     <div class="col-md-10 col-md-offset-1">
       <div class="box">
         <div style="margin-left: 20px">
