--- a/src/templates/home/dealroom.html
+++ b/src/templates/home/dealroom.html
@@ -16,7 +16,7 @@
               <span>Chat</span>
             </a>
             <a href="/projects/{{project.id}}">
-              <span>Profolio</span>
+              <span>Portfolio</span>
             </a>
           </div>
         </div>
