--- a/src/templates/home/maps.html
+++ b/src/templates/home/maps.html
@@ -95,7 +95,7 @@
     <div>
       <div class="row" style="text-align: center; padding-top: 20px">
         <div class="col-md-8">
-          <div id="map" style="width: 100%; min-height: 100vh;"></div>
+          <div id="map" style="width: 100%; min-height: 100vh; box-shadow: 4px 4px 4px 4px #888888;"></div>
         </div>
         <div class="col-md-4">
           {% for item in projects %}
@@ -189,7 +189,7 @@
         border-radius: 30px;
         min-height: 400px;
         position: relative;
-        box-shadow: 2px 2px 2px #888888;
+        box-shadow: 2px 2px 2px 2px #888888;
       }
 
       .box h2 {
