--- a/src/templates/home/footer.html
+++ b/src/templates/home/footer.html
@@ -5,13 +5,10 @@
                 OreFox
             </h2>
             <h4>
-                4517 Washington Ave.Manchester,Kentucky 39495
+                Level 3, 2 Edward St, Brisbane Qld 4054
             </h4>
             <h4>
-                (684)555-0102
-            </h4>
-            <h4>
-                (603)555-0123
+                (04) 3717 7555
             </h4>
         </div>
         <div class="col-md-2 col-md-offset-1">
@@ -47,7 +44,7 @@
                 <form action="/users/email/" method="post" class="form-horizontal">
                     <div class="col-sm-12">
                         <h3 style="height:65px">
-                            We send updates in every week
+                            Subscribe for regular updates
                         </h3>
                     </div>
                     <div class="form-group">
@@ -56,7 +53,7 @@
                                 placeholder="Email">
                         </div>
                         <div class="col-sm-3">
-                            <button style="height:65px" type="submit" class="go">Go</button>
+                            <button style="height:65px" type="submit" class="go">Subscribe</button>
                         </div>
                     </div>
                 </form>
