--- a/src/templates/home/projects.html
+++ b/src/templates/home/projects.html
@@ -55,15 +55,15 @@ projects
   </div>
 
   <div style="height: 100px"></div>
-  <ul class="list" style="margin:0 auto;text-align:center;font-size:20px">
+  <ul class="list" style="margin:0 auto;text-align:center;font-size:20px;">
     {% for page in page_list %}
         {% if request.GET.page %}
             {% if page == request.GET.page|add:0 %}
                 <a href="?page={{ page }}"
-                   class="btn-sm btn-success btn">{{ page }}</a>
+                   class="btn-sm btn-success btn" >{{ page }}</a>
             {% elif  request.GET.page|add:0 > data.number and page == 1 %}
                 <a href="?page={{ page }}"
-                   class="btn-lg btn-success btn">{{ page }}</a>
+                   class="btn-lg btn-success btn" >{{ page }}</a>
             {% else %}
                 <a href="?page={{ page }}" class="btn-lg btn">{{ page }}</a>
             {% endif %}
