--- a/src/templates/login/image.html
+++ b/src/templates/login/image.html
@@ -13,9 +13,9 @@ ChageImage
       <div class="col-md-3">
         <div style="height:50px"></div>
         <div>
-          <img src="/media/avatar/{{now_user.profile}}" style="width:200px;height:200px;margin:0 auto"
+          <img src="/media/avatar/{{now_user.profile}}" style="width:200px;height:200px;margin: auto"
             class="img-responsive img-circle" alt="">
-          <h4 style="margin:10px auto 0;text-align: center;font-size:20px;">
+          <h4 style="margin:0px auto 0;text-align: center;font-size:20px;">
             {{ now_user.email }}
           </h4>
         </div>
