--- a/src/templates/login/register.html
+++ b/src/templates/login/register.html
@@ -18,8 +18,7 @@ register
                 <div class="alert alert-warning">{{ message }}</div>
                 {% endif %}
 
-                <h2 style="text-align: left;font-size:40px;">Regist into <span
-                        style="font-size:54px;color: rgb(184, 92, 56);">Minefinder</span>
+                <h2 style="text-align: left;font-size:40px;">Register into Minefinder
                 </h2>
                 <div class="col-sm-10" style="margin: 20px 0 0 20px;">
                     <div style="font-size:20px;">
@@ -45,10 +44,6 @@ register
             </form>
         </div>
         <div class="clearfix"></div>
-        <div class="footer">
-            <span>©2021 - 2020 All rights reserved.</span>
-            <span>Designed & Developed by OreFox Geoscience Pty Ltd</span>
-        </div>
     </div>
 </div>
 
