updated html & database

--- a/src/templates/home/faqs.html
+++ b/src/templates/home/faqs.html
@@ -35,7 +35,7 @@ FAQ
           <div class="clearfix"></div>
           <h2>{{article.title}}</h2>
           <div style="border-bottom: 2px solid rgb(184, 92, 56)"></div>
-          {{article.brief | safe}}
+          <div style="text-align: left">{{article.brief | safe}}</div>
         </div>
         <div class="clearfix"></div>
       </div>
