--- a/src/templates/home/faq.html
+++ b/src/templates/home/faq.html
@@ -38,7 +38,7 @@ FAQ
           <a href="/faq/1">Who are my Projects visible to?</a>
           <a href="/faq/2">How do you promote my project?</a>
           <a href="/faq/3">How do I upload a mining or exploration project?</a>
-          <a href="/faq/4">I m not good with computers, can I get MineFinder to upload my project for me?</a>
+          <a href="/faq/4">I'm not good with computers, can I get MineFinder to upload my project for me?</a>
           <a href="/faq/5">Do I have to pay MineFinder a commission if I sell my project?</a>
           <a href="/faq/about/" class="more">See more</a>
         </div>
@@ -49,7 +49,7 @@ FAQ
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
-          <h2>Safrty & Security</h2>
+          <h2>Safety & Security</h2>
           <div style="border-bottom: 2px solid rgb(184,92,56);"></div>
           <a href="/faq/6">What security features do MineFinder Employ?</a>
           <a href="/faq/7">How to protect your personal information?</a>
@@ -72,7 +72,7 @@ FAQ
           <div style="border-bottom: 2px solid rgb(184,92,56);"></div>
           <a href="/faq/11">Can we have a Branded Landing Page?</a>
           <a href="/faq/12"> If I send a project through MineFinder for my team to evaluate, can the public see the
-            project once its uploaded?</a>
+            project once it is uploaded?</a>
           <a href="/faq/13">Can my company get a custom project upload template?</a>
           <a href="/faq/14"> Do we have to pay MineFinder a commission if we do deal on a project ?</a>
           <a href="/faq/evaluation/" class="more">See more</a>
