--- a/src/chat/templates/chat/room.html
+++ b/src/chat/templates/chat/room.html
@@ -11,29 +11,29 @@
     {{ room_name|json_script:"room-name" }}
 </div>
 <script>
-    // 获取房间名
+    // get room name
     const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
-    // 根据roomName拼接websocket请求地址，建立长连接
-    //  请求url地址为/ws/chat/<room_name>/
+    // Splicing the websocket request address according to roomName to establish a long connection
+    //  The request url address is /ws/chat/<room_name>/
     const wss_protocol = (window.location.protocol == 'https:') ? 'wss://' : 'ws://';
     const chatSocket = new WebSocket(
         wss_protocol + window.location.host + '/ws/chat/' + roomName + '/'
     );
 
-    // 建立websocket连接时触发此方法，展示欢迎提示
+    // This method is triggered when a websocket connection is established, showing a welcome prompt
     chatSocket.onopen = function (e) {
         document.querySelector('#chat-log').value += ('Welcome to the' + roomName + '\n')
     }
 
-    // 从后台接收到数据时触发此方法
-    // 接收到后台数据后对其解析，并加入到聊天记录chat-log
+    // This method is fired when data is received from the background
+    // After receiving the background data, parse it and add it to the chat record chat-log
     chatSocket.onmessage = function (e) {
         const data = JSON.parse(e.data);
         document.querySelector('#chat-log').value += (data.message + '\n');
     };
 
-    // websocket连接断开时触发此方法
+    //This method is triggered when the websocket connection is disconnected
     chatSocket.onclose = function (e) {
         console.error('Chat socket closed unexpectedly');
     };
@@ -45,12 +45,12 @@
         }
     };
 
-    // 每当点击发送消息按钮，通过websocket的send方法向后台发送信息。
+    // Whenever the send message button is clicked, information is sent to the background through the send method of websocket.
     document.querySelector('#chat-message-submit').onclick = function (e) {
         const messageInputDom = document.querySelector('#chat-message-input');
         const message = messageInputDom.value;
 
-        //注意这里:先把文本数据转成json格式,然后调用send方法发送。
+        //Note here: first convert the text data into json format, and then call the send method to send.
         chatSocket.send(JSON.stringify({
             'message': message
         }));
